--- a/src/index.css
+++ b/src/index.css
@@ -45,6 +45,7 @@ body {
 	font-size: 24px;
 	font-weight: normal;
 	color: rgb(59, 59, 59);
+	text-decoration: none;
 }
 .nav-logo i {
 	font-size: 24px;
